--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "coveralls": "^3.1.0",
     "node-sass": "^4.14.1",
+    "nyc": "^15.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dnd": "^11.1.3",
@@ -35,7 +37,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false -u --coverage",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "eslintConfig": {
     "extends": "react-app"
