--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false -u --coverage",
     "eject": "react-scripts eject",
