--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "coveralls": "^3.1.0",
+    "moment": "^2.28.0",
     "node-sass": "^4.14.1",
     "nyc": "^15.1.0",
     "react": "^16.13.1",
